[package]
name = "mintmark"
version = "0.2.0"
authors = ["Benjamin Gilbert <bgilbert@backtick.net>"]
edition = "2021"
license = "Apache-2.0"
description = "Markdown renderer for Epson TM-U220B receipt printers"
readme = "README.md"
repository = "https://github.com/bgilbert/mintmark"
rust-version = "1.61"
exclude = [
    ".github",
    ".gitignore"
]

[dependencies]
anyhow = "1.0"
barcoders = "1.0.2"
bitflags = "1.3.2"
clap = { version = "4.0.32", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
encoding = "0.2.33"
fs2 = "0.4.3"
image = { version = "0.24.5", default-features = false }
pulldown-cmark = "0.9.2"
qrcode = { version = "0.12", default-features = false }
