[package]
name = "mintmark"
version = "0.2.0"
authors = ["Benjamin Gilbert <bgilbert@backtick.net>"]
edition = "2021"
license = "Apache-2.0"
description = "Markdown renderer for Epson TM-U220B receipt printers"
readme = "README.md"
repository = "https://github.com/bgilbert/mintmark"
rust-version = "1.64"
exclude = [
    ".github",
    ".gitignore"
]

[dependencies]
anyhow = "1.0"
barcoders = "1.0.2"
base64 = "0.21.2"
bitflags = "2.3.3"
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
encoding = "0.2.33"
fs2 = "0.4.3"
image = { version = "0.24.6", default-features = false, features = ["pnm", "webp"] }
pulldown-cmark = "0.9.3"
qrcode = { version = "0.12", default-features = false }

[build-dependencies]
anyhow = "1.0"

[features]
default = ["jpeg", "png"]
jpeg = ["image/jpeg"]
png = ["image/png"]
